--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider next start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
