--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^7.4.0",
+    "react-router": "^7.4.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.0.1"
   },
